[package]
name = "demo5"
version = "0.1.0"
authors = ["dollarkiller <wangy@mvalley.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
mini-redis = "0.2"
bytes = "0.5" # 具有bytes引用计数器 浅克隆